Keep formatting tags included when it is cut or copied.

When we copy/cut a formatting tag without the highest node.
the formatting tag's text can be wrapped by <span> tag
instead of the formatting tag. This CL allows to keep
formatting tags included when it is cut or copied.

BUG=634482
TEST=editing/pasteboard/cut-paste-formatting-tag.html

Review-Url: https://codereview.chromium.org/2229703004
Cr-Commit-Position: refs/heads/master@{#411883}

Former-commit-id: f77d0eaedb2787483c147b973bcf7e7de82bf0f3